# Critique-Coder

./: .gitignore  README.md  index.html  pyproject.toml
examples/train/: train_qwen3_4b_02_08_crl_08_dapo.sh  train_qwen3_4b_16k.sh  train_qwen3_4b_32k.sh
verl/verl/utils/reward_score/prime_code/: __init__.py
verl/verl/workers/reward_manager/: prime.py
verl_tool/workers/reward_manager/: crl.py
