[project]
name = "verl-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fire>=0.7.0",
    "verl==0.4.1.dev0",
    "scipy==1.15.2",
]

[tool.uv.sources]
verl = { path = "verl" }

[tool.setuptools]
packages = ["verl_tool"]  # Explicitly specify only the verl_tool package

[project.optional-dependencies]
vllm = [
    "vllm==0.8.5.post1",
]
acecoder = [
    "AceCoder @ git+https://github.com/TIGER-AI-Lab/AceCoder.git@dev",
]
